# meshcap

./: AGENTS.md  README.md  pyproject.toml
src/meshcap/: __init__.py  constants.py  filter.py  identifiers.py  main.py  payload_formatter.py  serialization.py
tests/: test_args.py  test_connection.py  test_constants.py  test_e2e_format_line.py  test_file_io.py  test_filtering.py  test_flag_formatting.py  test_formatting.py  test_hop_formatting.py  test_identifiers.py  test_integration_serialization.py  test_logging.py  test_nodebook.py  test_payload_formatter.py  test_serialization.py  test_subscription.py  test_threading.py  test_type_hints.py
