[project]
name = "meshcap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nicolas Untz", email = "nicolas@untz.net" }
]
requires-python = ">=3.12"
dependencies = [
    "meshtastic>=2.7.0",
    "pytest>=8.4.1",
]

[project.scripts]
meshcap = "meshcap.main:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
